@startuml

title __ACCOUNT's Class Diagram__\n

  package  {
    package account {
      class AirlineEmployee {
          - airlineID : int
          + AirlineEmployee()
          + getAirlineID()
      }
    }
  }
  

  package  {
    package account {
      class Customer {
          + Customer()
          + getPoints()
      }
    }
  }
  

  package  {
    package account {
      class LoyaltyPoints {
          - numOfPoints : int
          + LoyaltyPoints()
          + getNumOfPoints()
          + getValueOfPointsInEuro()
          + updatePoints()
      }
    }
  }
  

  package  {
    package account {
      class SimpleUserFactory {
          + SimpleUserFactory()
          + createUser()
      }
    }
  }
  

  package  {
    package account {
      abstract class User {
          - userName : String
          - userID : int
          - userType : int
          # setUserName()
          # setUserID()
          # setUserType()
          + getUserName()
          + getUserID()
          + getUserType()
      }
    }
  }
  

  AirlineEmployee -up-|> User
  Customer -up-|> User
  Customer o-- LoyaltyPoints : points


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
